2193.	[build]		razvan
	The library version numbers have been bumped up for the Kea 2.5.4
	development release.
	(Gitlab #3173)

2192.	[func]		razvan
	The packet logging is now more consistent between DHCPv4 and
	DHCPv6. Also, extra details are now logged.
	(Gitlab #3109)

2191.	[doc]		andrei
	The new RADIUS hook library is now operational. Documentation has
	been updated. A section about differences to the old RADIUS hook
	library is included.
	(Gitlab #2442)

Kea 2.5.3 (development) released on October 25, 2023

2190.	[build]		razvan
	The library version numbers have been bumped up for the Kea 2.5.3
	development release.
	(Gitlab #3118)

2189.	[doc]		tomek
	Security reporting process described in a Github-friendly format.
	There is no new information, mostly pointers to already existing
	documents.
	(Gitlab #3080)

2188.	[bug]		razvan
	Fixed a race condition in free lease queue allocator.
	(Gitlab #3111)

2187.	[func]		tmark
	To facilitate use in containers, the restriction from listening
	on 0.0.0.0 or :: addresses has been removed from kea-dhcp-ddns.
	The server will now issue a warning if configured to use either
	address.
	(Gitlab #3116)

2186.	[bug]		andrei
	Fixed interface redetection which had stopped working since
	Kea 2.3.6.
	(Gitlab #3017)

2185.	[func]		razvan
	Added extended log messages: DHCP4_DISCOVER, DHCP4_REQUEST,
	DHCP6_PROCESS_IA_NA_SOLICIT, DHCP6_PROCESS_IA_PD_SOLICIT, which
	include the hint address in the client request. The log message
	tag DHCP4_LEASE_ADVERT has been renamed to DHCP4_LEASE_OFFER.
	(Gitlab #2918)

2184.	[bug]		razvan
	Fixed a bug in evaluated expression parser which was not properly
	handling escaped null characters.
	(Gitlab #3086)

2183.	[bug]		andrei
	Fixed a bug where one of the commands that retrieve statistic
	values sent to the kea-ctrl-agent would get an overflow error in
	the response if the inquired statistic was intended to have a big
	integer data type, and if the integer value would not be