@@ -17,7 +17,7 @@ Regularly Tested Platforms
 Kea is officially supported on Alpine, Debian, Fedora, FreeBSD, RHEL, and Ubuntu
 systems. Kea-|release| builds have been tested on:
 
-* Alpine — 3.15, 3.16, 3.17
+* Alpine — 3.16, 3.17
 * Debian — 10, 11, 12
 * Fedora — 36, 37, 38
 * FreeBSD — 13
@@ -50,7 +50,7 @@ adverse effect on officially supported platforms.
 
 These include platforms past their respective EOL dates, such as:
 
-* Alpine — 3.10, 3.11, 3.12, 3.13, 3.14 (EOL 01 May 2023)
+* Alpine — 3.10, 3.11, 3.12, 3.13, 3.14, 3.15 (EOL 01 Nov 2023)
 * CentOS — 6 (EOL 30 November 2020), 7 (EOL 30 June 2024), 8 (EOL 31 December 2021)
 * Debian — 8, 9 (EOL 30 June 2022)
 * Fedora — 31, 32, 33, 34, 35 (EOL 13 December 2022)
